<resources>
    <string name="app_name">Property Mediator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Name">Name</string>
    <string name="Notes">Notes</string>
    <string name="Phone">Phone</string>
    <string name="Email">Email</string>
    <string name="ContactNo">ContactNo</string>
    <string name="Delete">Delete</string>
    <string name="Add">Add</string>
    <string name="View">View</string>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>
    <string name="Call">Call</string>
    <string name="PAN">PAN Number</string>


    <string name="edit_reminder_title">Notification Reminder</string>
    <string name="No_Reminders_Yet">No Reminders Yet</string>
    <string name="menu_insert">Add Reminder</string>
    <string name="menu_delete">Delete Reminder</string>
    <string name="menu_settings">Settings</string>
    <string name="title">Hint</string>
    <string name="body">Message</string>
    <string name="confirm">Save</string>

    <string name="edit_reminder">Edit Reminder</string>
    <string name="date">Reminder Date</string>
    <string name="time">Reminder Time</string>

    <!-- Toasts -->
    <string name="task_saved_message">Reminder has been saved</string>

    <!-- Notification Bar -->
    <string name="notify_new_task_message">New Reminder Created!</string>
    <string name="notify_new_task_title"> Reminder</string>

    <!-- Preferences -->
    <string name="pref_category_task_defaults_key">task_default_category</string>
    <string name="pref_category_task_defaults_title">Task Title Default</string>
    <string name="pref_task_title_key">default_reminder_title</string>
    <string name="pref_task_title_dialog_title">Default Reminder Title</string>
    <string name="pref_task_title_message">The default title for a reminder.</string>
    <string name="pref_task_title_summary">Default title for reminders.</string>
    <string name="pref_task_title_title">Default Reminder Title</string>

    <string name="pref_category_datetime_key">date_time_default_category</string>
    <string name="pref_category_datetime_title">Date Time Defaults</string>
    <string name="pref_default_time_from_now_key">time_from_now_default</string>
    <string name="pref_default_time_from_now_dialog_title">Time From Now</string>
    <string name="pref_default_time_from_now_message">The default time from now that a new reminder should be set to.</string>
    <string name="pref_default_time_from_now_summary">Sets the default time for a reminder.</string>
    <string name="pref_default_time_from_now_title">Default Reminder Time</string>


    <string name="Own">Owner Name : </string>
    <string name="name">Enter name</string>
    <string name="Prop">Property Type :</string>
    <string name="ph">Phone:</string>
    <string name="no">Phone No</string>
    <string name="mail">Email :</string>
    <string name="email">Enter email</string>
    <string name="addr">Address :</string>
    <string name="add">Address for Communication</string>
    <string name="full">Property Details :</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="about">Add property details here</string>
    <string name="click">Click</string>
    <string name="house">House</string>
    <string name="land">Land</string>
    <string name="typ">Choose Type of Property</string>
    <string name="value" />
    <string name="back">Back</string>
    <string name="get">Get Image</string>
    <string name="savein">Save in DB</string>
    <string name="readin">Read Image in DB</string>
    <string name="exit">Exit</string>
    <string name="home">Home</string>
    <string name="call">call</string>
</resources>
