<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
     	android:background="@drawable/background1"
    
    >

    <TextView
        android:id="@+id/lblname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        	 	android:textColor="#ffffff" />

    <EditText
        android:id="@+id/txtname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Name" 
        	 	android:textColor="#ffffff">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lblnotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Notes" 
    android:textColor="#ffffff"/>
    

    <EditText
        android:id="@+id/txtnotes"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/Notes" 
        	android:textColor="#ffffff"/>
     <TextView
        android:id="@+id/lblpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PAN" 
        	 	android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/txtpan"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/PAN" 
         	android:textColor="#ffffff"/>

     <TextView
        android:id="@+id/lblphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Phone" 
        	 	android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/txtphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/ContactNo"
        	 	android:textColor="#ffffff"  />
    <TextView
        android:id="@+id/lblemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email" 
     	android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/txtmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/Email"  
        	 	android:textColor="#ffffff"/>

     <Button
        android:id="@+id/btncall"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Call"
        android:textColor="#ffffff" />
    

    <Button
        android:id="@+id/btndelet"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Delete"
        android:textColor="#ffffff" />

</LinearLayout>
