<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
     	android:background="@drawable/background1"
   >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
     
        >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@android:drawable/ic_menu_camera"
            
 />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/spinner1"
            android:text="@string/ph"
            android:textAppearance="?android:attr/textAppearanceMedium"
            	android:textColor="#ffffff" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editText2"
            android:text="@string/mail"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            	android:textColor="#ffffff"/>

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editText3"
            android:text="@string/addr"
            android:textAppearance="?android:attr/textAppearanceMedium"
            	android:textColor="#ffffff"/>

        <TextView
            android:id="@+id/detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editText4"
            android:text="@string/full"
            android:textAppearance="?android:attr/textAppearanceMedium"
            	android:textColor="#ffffff"/>

        <TextView
            android:id="@+id/Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/imageView1"
            android:text="@string/Own"
            android:textAppearance="?android:attr/textAppearanceMedium"
            	android:textColor="#ffffff" />

        <TextView
            android:id="@+id/Property"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editText1"
            android:text="@string/Prop"
            android:textAppearance="?android:attr/textAppearanceMedium"
            	android:textColor="#ffffff" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/Property"
           />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/Name"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            	android:textColor="#ffffff" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/phone"
            android:ems="10"
            android:hint="@string/no"
            android:inputType="phone" 
            	android:textColor="#ffffff">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/email"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/address"
            android:ems="10"
            android:hint="@string/add"
            android:inputType="textPostalAddress"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/detail"
            android:ems="10"
            android:hint="@string/about"
            android:inputType="textMultiLine"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/save"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editText5"
            android:text="@string/save" 
            android:textColor="#ffffff"/>

        <Button
            android:id="@+id/cancel"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/save"
            android:text="@string/cancel"
            android:textColor="#ffffff" />
    </RelativeLayout>

</ScrollView>